--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-   <title>Satyamurti Doddini &mdash;Android Developer</title>
+   <title>Nishant Bundela &mdash;Android Developer</title>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
@@ -21,7 +21,7 @@
             aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
          </button>
-         <a class="navbar-brand" href="index.html">Satyamurti Doddini</a>
+         <a class="navbar-brand" href="index.html">Nishant Bundela</a>
          <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample09">
             <ul class="navbar-nav">
                <li class="nav-item"><a class="nav-link" href="#section-home">Home</a></li>
@@ -40,9 +40,9 @@
       <div class="container">
          <div class="row intro-text align-items-center justify-content-center">
             <div class="col-md-10 text-center">
-               <h1 class="site-heading site-animate">Hola, myself <strong>Satyamurti</strong><br> And I am<br><strong>
+               <h1 class="site-heading site-animate">Hola, myself <strong>Nishant Bundela</strong><br> And I am<br><strong>
                      <span class="typewrite" data-period="3000"
-                        data-type='[ "Android Developer", "CSE Student"]'></span></strong></h1>
+                        data-type='[ "Data and AI Product Manager", "MSEM Student"]'></span></strong></h1>
                <p class="lead site-subheading mb-4 site-animate">Currently studying at NIT Trichy </p>
                <p><a href="#section-about" class="smoothscroll btn btn-primary px-4 py-3">More About Me</a></p>
             </div>
@@ -69,7 +69,7 @@
                <p>
                   <!-- <a href="https://docs.google.com/presentation/d/1MBbeSmS2tI831z5IjMCB2ZGpJWartRY_dhJirERNOtQ/edit?usp=sharing" target="_blank" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Cover Letter</a>-->
                   <!-- <a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Cover Letter</a> -->
-                  <a href="Satyamurti_Resume.pdf" target="_blank"
+                  <a href="NishantBundela_P1.pdf" target="_blank"
                      class="btn btn-primary px-4 py-2 btn-sm smoothscroll">My Resume</a>
                   <!-- <a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Get Resume</a> -->
                </p>
@@ -84,10 +84,10 @@
                   <div class="col-md-6">
                      <h1 class="mb-5">Education</h1>
                      <div class="resume-item mb-4">
-                        <h3><strong>National Institute of Technology Trichy</strong></h3>
+                        <h3><strong>Johns Hopkins University</strong></h3>
 
-                        <span class="school">Btech in Computer Science</span>
-                        <p>Expected 2023 | Trichy, India</p>
+                        <span class="school">Master of Science in Engineering Management</span>
+                        <p>Expected 2022 | Baltimore, USA</p>
                      </div>
                   </div>
                   <div class="col-md-6">
