--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-   <title>Nishant Bundela &mdash;Android Developer</title>
+   <title>Nishant Bundela &mdash;MSEM Student</title>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
@@ -40,10 +40,10 @@
       <div class="container">
          <div class="row intro-text align-items-center justify-content-center">
             <div class="col-md-10 text-center">
-               <h1 class="site-heading site-animate">Hola, myself <strong>Nishant Bundela</strong><br> And I am<br><strong>
+               <h1 class="site-heading site-animate">Hola,<strong>Nishant Bundela</strong><br> here And I am a<br><strong>
                      <span class="typewrite" data-period="3000"
-                        data-type='[ "Data and AI Product Manager", "MSEM Student"]'></span></strong></h1>
-               <p class="lead site-subheading mb-4 site-animate">Currently studying at NIT Trichy </p>
+                        data-type='[ "Data Analyst", "AI Product Manager", "MSEM Student"]'></span></strong></h1>
+               <p class="lead site-subheading mb-4 site-animate">Currently studying at the Johns Hopkins University </p>
                <p><a href="#section-about" class="smoothscroll btn btn-primary px-4 py-3">More About Me</a></p>
             </div>
          </div>
@@ -584,16 +584,16 @@
                         <div class="row mb-3">
                            <div class="col-md-12 text-center">
 
-                              <h5><span class="title-s">Name: </span> <span>Satyamurti Doddini</span></h5>
-                              <h5><span class="title-s">Email: </span> <span>spd.doddini@gmail.com</span></p>
+                              <h5><span class="title-s">Name: </span> <span>Nishant Bundela</span></h5>
+                              <h5><span class="title-s">Email: </span> <span>spd.Bundela@gmail.com</span></p>
                                  <h5><span class="title-s">Phone: </span> <span>+91 <strong>90962663336</strong> </span>
                                  </h5>
                                  <br></br>
-                                 <a href="https://github.com/satyamurti" target="_blank"><img src="images/github.png"
+                                 <a href="https://github.com/Nishant" target="_blank"><img src="images/github.png"
                                        height=27></a>
-                                 <a href="https://www.linkedin.com/in/satyamurti-d/" target="_blank"><img
+                                 <a href="https://www.linkedin.com/in/Nishant-d/" target="_blank"><img
                                        src="images/linkedin.png" height=27></a>
-                                 <a href="https://www.instagram.com/satyamurti_d/?hl=en" target="_blank"><img
+                                 <a href="https://www.instagram.com/Nishant_d/?hl=en" target="_blank"><img
                                        src="images/instagram.png" height=27></a>
                            </div>
                         </div>
