Skills and image added

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                <div class="row" style="margin-bottom: 60px;">
 
                   <div class="card1">
-                     <img src="images/kotlin.png" alt="Avatar" class="card-image"  height="60vw"
+                     <img src="images/python.png" alt="Avatar" class="card-image"  height="60vw"
                         object-fit="cover">
                      <hr />
                      <div class="card-text">
@@ -126,7 +126,7 @@
                   </div>
 
                   <div class="card1">
-                     <img src="images/java.png" alt="Avatar" class="card-image"  height="60vw"
+                     <img src="images/JavaScript.png" alt="Avatar" class="card-image"  height="60vw"
                         object-fit="cover">
                      <hr />
                      <div class="card-text">
