--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                <div class="row" style="margin-bottom: 60px;">
 
                   <div class="card1">
-                     <img src="images/python.png" alt="Avatar" class="card-image"  height="60vw"
+                     <img src="images/Python.png" alt="Avatar" class="card-image"  height="60vw"
                         object-fit="cover">
                      <hr />
                      <div class="card-text">
@@ -443,7 +443,7 @@
             </div>
          </div>
    </section>
-
+<!--
    <section class="site-section" id="section-certifications">
       <div class="container">
          <div class="row">
@@ -537,7 +537,7 @@
          </div>
       </div>
    </section>
-
+-->
 
 
 
@@ -582,16 +582,14 @@
                            <div class="col-md-12 text-center">
 
                               <h5><span class="title-s">Name: </span> <span>Nishant Bundela</span></h5>
-                              <h5><span class="title-s">Email: </span> <span>spd.Bundela@gmail.com</span></p>
-                                 <h5><span class="title-s">Phone: </span> <span>+91 <strong>90962663336</strong> </span>
+                              <h5><span class="title-s">Email: </span> <span>nbundel1@jh.edu</span></p>
+                                 <h5><span class="title-s">Phone: </span> <span>+1 <strong>6679103834</strong> </span>
                                  </h5>
                                  <br></br>
-                                 <a href="https://github.com/Nishant" target="_blank"><img src="images/github.png"
+                                 <a href="https://github.com/nishantbundela" target="_blank"><img src="images/github.png"
                                        height=27></a>
-                                 <a href="https://www.linkedin.com/in/Nishant-d/" target="_blank"><img
+                                 <a href="https://www.linkedin.com/in/nishantbundela/" target="_blank"><img
                                        src="images/linkedin.png" height=27></a>
-                                 <a href="https://www.instagram.com/Nishant_d/?hl=en" target="_blank"><img
-                                       src="images/instagram.png" height=27></a>
                            </div>
                         </div>
                      </div>
