removed unnessary stuff

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="col-md-10 text-center">
                <h1 class="site-heading site-animate">Hola, <strong>Nishant Bundela</strong><br> here And I am a<br><strong>
                      <span class="typewrite" data-period="3000"
-                        data-type='[ "Data Analyst", "AI Product Manager", "MSEM Student"]'></span></strong></h1>
+                        data-type='[ "Engineer", "Manager", "Consultant" "Human"]'></span></strong></h1>
                <p class="lead site-subheading mb-4 site-animate">Currently studying at the Johns Hopkins University </p>
                <p><a href="#section-about" class="smoothscroll btn btn-primary px-4 py-3">More About Me</a></p>
             </div>
@@ -276,7 +276,8 @@
          </div>
       </div>
    </section>
-
+-->
+<!--
    <section class="site-section" id="section-work">
       <div class="container">
          <div class="row" style="margin-bottom: 60px;">
@@ -290,7 +291,7 @@
                   <li data-filter=".android">Mobile Application</li>
                   <li data-filter=".mldl">Website</li>
                </ul>
-            </div> -->
+            </div>
          <div class="filters-content">
             <div class="row">
 
@@ -443,6 +444,7 @@
             </div>
          </div>
    </section>
+-->
 <!--
    <section class="site-section" id="section-certifications">
       <div class="container">
