Added Data science and AI skills

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         object-fit="cover">
                      <hr />
                      <div class="card-text">
-                        Kotlin
+                        Python
                      </div>
                   </div>
 
@@ -164,39 +164,39 @@
 
 
                <span class="certified">
-                  <h4>Android Development </h4>
+                  <h4>Data Science and AI </h4>
                </span>
 
                <div class="row" style="margin-bottom: 60px;">
                   <div class="card1">
-                     <img src="images/androidkotlin.png" alt="Avatar" height="60vw">
+                     <img src="images/numpy.png" alt="Avatar" height="60vw">
                      <hr />
                      <div class="card-text">
-                        Kotlin
+                        NumPy
                      </div>
                   </div>
 
                   <div class="card1">
-                     <img src="images/java.png" alt="Avatar" height="60vw" object-fit="cover">
+                     <img src="images/pandas.png" alt="Avatar" height="60vw" object-fit="cover">
                      <hr />
                      <div class="card-text">
-                        Java
+                        Pandas
                      </div>
                   </div>
 
                   <div class="card1">
-                     <img src="images/jetpack.png" alt="Avatar"  height="60vw" object-fit="cover">
+                     <img src="images/sci-kit.png" alt="Avatar"  height="60vw" object-fit="cover">
                      <hr />
                      <div class="card-text">
-                        Jetpack
+                        SciKit-Learn
                      </div>
                   </div>
 
                   <div class="card1">
-                     <img src="images/dagger.png" alt="Avatar"  height="60vw" object-fit="cover">
+                     <img src="images/matplotlib.png" alt="Avatar"  height="60vw" object-fit="cover">
                      <hr />
                      <div class="card-text">
-                        Dagger
+                        Matplotlib
                      </div>
                   </div>
 
