Added more skillss

--- a/index.html
+++ b/index.html
@@ -200,6 +200,22 @@
                      </div>
                   </div>
 
+                  <div class="card1">
+                     <img src="images/sql.png" alt="Avatar"  height="60vw" object-fit="cover">
+                     <hr />
+                     <div class="card-text">
+                        SQL
+                     </div>
+                  </div>
+
+                  <div class="card1">
+                     <img src="images/Tableau.png" alt="Avatar"  height="60vw" object-fit="cover">
+                     <hr />
+                     <div class="card-text">
+                        Tableau
+                     </div>
+                  </div>
+
 
                </div>
                <span class="certified">
@@ -215,10 +231,10 @@
                   </div>
 
                   <div class="card1">
-                     <img src="images/as.jfif" alt="Avatar"  height="60vw" object-fit="cover">
+                     <img src="images/linux.png" alt="Avatar"  height="60vw" object-fit="cover">
                      <hr />
                      <div class="card-text">
-                        AS
+                        Linux
                      </div>
                   </div>
 
@@ -234,24 +250,32 @@
                </div>
 
                <span class="section-heading">
-                  <h4>Backends</h4>
+                  <h4>Product Management</h4>
                </span>
 
 
                <div class="row" style="margin-bottom: 60px;">
                   <div class="card1">
-                     <img src="images/firebase.png" alt="Avatar"  height="60vw" object-fit="cover">
+                     <img src="images/slack.png" alt="Avatar"  height="60vw" object-fit="cover">
                      <hr />
                      <div class="card-text">
-                        Firebase
+                        Slack
                      </div>
                   </div>
 
                   <div class="card1">
-                     <img src="images/gcp.png" alt="Avatar"  height="60vw" object-fit="cover">
+                     <img src="images/jira.png" alt="Avatar"  height="60vw" object-fit="cover">
                      <hr />
                      <div class="card-text">
-                        GCP
+                        Jira
+                     </div>
+                  </div>
+
+                  <div class="card1">
+                     <img src="images/Miro.png" alt="Avatar"  height="60vw" object-fit="cover">
+                     <hr />
+                     <div class="card-text">
+                        Miro
                      </div>
                   </div>
 
