--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                   <h2>About<strong> Me</strong></h2>
                </div>
                <!-- <p class="lead">A Google certified Android Developer </p> -->
-               <p class="mb-5  ">Graduate student@JHU, always ready to learn new
-                  things.Currently learning "Machine Learning" and improving other capabilities day by day. Open source Enthusiast.
+               <p class="mb-5  ">Graduate student@JHU. I dream of a cyberpunk world where technology is synonymous with every aspect of daily life. I want to be an enabler who has knowledge of all technological domians. Believe in me, Stand with me and let's change the world!
                   <br><br>
                </p>
                <p>
