--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="col-md-10 text-center">
                <h1 class="site-heading site-animate">Hola, <strong>Nishant Bundela</strong><br> here And I am a<br><strong>
                      <span class="typewrite" data-period="3000"
-                        data-type='[ "Engineer", "Manager", "Consultant" "Human"]'></span></strong></h1>
+                        data-type='[ "Engineer", "Manager", "Consultant", "Human"]'></span></strong></h1>
                <p class="lead site-subheading mb-4 site-animate">Currently studying at the Johns Hopkins University </p>
                <p><a href="#section-about" class="smoothscroll btn btn-primary px-4 py-3">More About Me</a></p>
             </div>
