--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
    <title>Nishant Bundela &mdash;MSEM Student</title>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -281,7 +282,7 @@
 
                </div>
 
-
+<!--
                <span class="section-heading">
                   <h4>Databases</h4>
                </span>
