--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                   </div>
 
                   <div class="card1">
-                     <img src="images/Tableau.png" alt="Avatar"  height="60vw" object-fit="cover">
+                     <img src="images/tableau.png" alt="Avatar"  height="60vw" object-fit="cover">
                      <hr />
                      <div class="card-text">
                         Tableau
@@ -272,7 +272,7 @@
                   </div>
 
                   <div class="card1">
-                     <img src="images/Miro.png" alt="Avatar"  height="60vw" object-fit="cover">
+                     <img src="images/miro.png" alt="Avatar"  height="60vw" object-fit="cover">
                      <hr />
                      <div class="card-text">
                         Miro
